--- a/presentation.html
+++ b/presentation.html
@@ -57,5 +57,10 @@
     <h2>Les Installations</h2>
     <p>Nos installations modernes et bien entretenues sont conçues pour répondre aux besoins de tous les cavaliers et de leurs chevaux. Nous disposons d’un rond de longe, parfait pour le travail en liberté, les séances de mise en condition et le débourrage des jeunes chevaux. Notre grande carrière est équipée de divers obstacles, offrant un cadre idéal pour l’entraînement de saut d’obstacles, le dressage et les sessions polyvalentes.</p>
     <p>En outre, nous avons récemment réaménagé une parcelle de pré pour créer un terrain d’initiation au cross. Ce parcours comprend un gué, des troncs d’arbres et une butte, permettant aux cavaliers et à leurs montures de s’initier aux joies et aux défis du cross-country en toute sécurité. Ces installations diversifiées offrent des opportunités d'entraînement variées et stimulantes pour tous les niveaux.</p>
-    </body>
+
+    <div class="banniere">
+        <p>Ce site a été entièrement réalisé par <a class="linkedin" href="https://www.linkedin.com/in/gabrielle-chauveau/">Chauveau Gabrielle</a>. Le code a été réalisé sur Visual Studio Code. Toutes les photos appartiennent exclusivement au créateur de la page.  </p>
+    </div>
+
+</body>
 </html>
