--- a/presentation.html
+++ b/presentation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Présentation</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
                 </a>
             </li>
             <li><a href="presentation.html">Présentation</a></li>
-            <li><a href="Actu.html">Actualités</a></li>
+            <li><a href="actu.html">Actualités</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
