--- a/actu.html
+++ b/actu.html
@@ -42,5 +42,10 @@
     <h2>Qualification pour les championnats de France</h2>
     <p>Nous sommes heureux de vous annoncer que deux de nos talentueuses cavalières se sont brillamment qualifiées pour les Championnats de France 2024 en Club 1 ! Anaïs et sa fidèle monture Hiesta des Vignes, ainsi que Gabrielle et son cheval Kermoroc'h, ont su démontrer leur excellence et leur détermination sur les terrains de compétition. Les Championnats se tiendront du 20 au 27 juillet 2024 au Parc Fédéral à Lamotte Beuvron, et nous sommes impatients de les soutenir dans cette prestigieuse compétition. Félicitations à Anaïs, Gabrielle, et à leurs incroyables partenaires équins pour cette remarquable réussite !</p>
     <img src="Image/concours Grande.jpeg" class="photoactu" alt="">
+
+    <div class="banniere">
+        <p>Ce site a été entièrement réalisé par <a class="linkedin" href="https://www.linkedin.com/in/gabrielle-chauveau/">Chauveau Gabrielle</a>. Le code a été réalisé sur Visual Studio Code. Toutes les photos appartiennent exclusivement au créateur de la page.  </p>
+    </div>
+
 </body>
 </html>
