--- a/contact.html
+++ b/contact.html
@@ -51,5 +51,10 @@
     <h2>Vous souhaitez nous rencontrer ? 
       Cliquez sur la maps</h2>
     <a href="https://www.google.com/maps/dir//44330+La+Regrippi%C3%A8re/@47.1814103,-1.2205783,15z/data=!4m9!4m8!1m0!1m5!1m1!1s0x48060c71da051501:0x28b2b4c02f07bb62!2m2!1d-1.2154973!2d47.1815911!3e0?entry=ttu"><img src="Image/Maps.png" img class="plan"> </a>
+    <div class="banniere">
+        <p>Ce site a été entièrement réalisé par <a class="linkedin" href="https://www.linkedin.com/in/gabrielle-chauveau/">Chauveau Gabrielle</a>. Le code a été réalisé sur Visual Studio Code. Toutes les photos appartiennent exclusivement au créateur de la page.  </p>
+    </div>
+
+
 </body>
 </html>
